--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
+.DS_Store
 .htaccess
 wp-config.php
-wp-content/uploads/
+wp-content/uploads/2012/
 wp-content/blogs.dir/
 wp-content/upgrade/
 wp-content/backup-db/
