--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 .DS_Store
 wp-config.php
 wp-content/uploads/2012/
+wp-content/uploads/2013/07/
+wp-content/uploads/2013/08/
 wp-content/blogs.dir/
 wp-content/upgrade/
 wp-content/backup-db/
@@ -12,3 +14,4 @@ wp-content/cache/
 wp-content/backups/
 sitemap.xml
 sitemap.xml.gz
+*.mp4
