--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ wp-config.php
 wp-content/uploads/2012/
 wp-content/uploads/2013/07/
 wp-content/uploads/2013/08/
+wp-content/uploads/2013/09/
 wp-content/blogs.dir/
 wp-content/upgrade/
 wp-content/backup-db/
