--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ wp-content/uploads/2012/
 wp-content/uploads/2013/07/
 wp-content/uploads/2013/08/
 wp-content/uploads/2013/09/
+wp-content/uploads/2013/10/
 wp-content/blogs.dir/
 wp-content/upgrade/
 wp-content/backup-db/
